# skewed-sequences

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.claude/: settings.json
.claude/agents/: experiment-reproducibility-auditor.md  lazy-cli-guard.md  loss-math-reviewer.md
.claude/hooks/: _gitutil.py  auto_format.py  block_large_secret.py  guard_git.py  run_pytest.py
.claude/skills/code-review/: SKILL.md
.claude/skills/commit-push/: SKILL.md
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: run_sweep.sh
skewed_sequences/: __init__.py  cli.py  config.py  dataset.py  features.py  generate_data.py  load_data.py  metrics.py  mlflow_contract.py  plots.py  style.py  visualize_data.py  visualize_losses.py
skewed_sequences/data/: _common.py
skewed_sequences/data/health_fitness/: dataset.py
skewed_sequences/data/lanl/: dataset.py
skewed_sequences/data/owid_covid/: dataset.py  load_data.py
skewed_sequences/data/rvr_us/: dataset.py  load_data.py
skewed_sequences/data/synthetic/: generate_data.py
skewed_sequences/experiments/: aggregate_results.py  calculate_dispersion_scaling.py  calculate_metrics.py  collect_results.py  lambdas.py  synthetic_data.py
skewed_sequences/experiments/run_experiments/: _runner.py  head_attention_data.py  lambdas.py  lanl_data.py  owid_covid_data.py  rvr_us_data.py  synthetic_data.py
skewed_sequences/modeling/: data_processing.py  evaluation.py  loss_functions.py  models.py  predict.py  train.py  trainer.py  utils.py  visualize.py
skewed_sequences/visualization/: plots.py  predictions.py  style.py  visualize_data.py  visualize_losses.py
tests/: test_aggregate_results.py  test_cli.py  test_collect_results.py  test_config.py  test_data_common.py  test_data_processing.py  test_evaluation.py  test_generate_data.py  test_head_attention.py  test_loss_functions.py  test_metrics.py  test_mlflow_contract.py  test_models.py  test_runner.py  test_sgt_consistency.py  test_train.py
