[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "skewed-sequences"
version = "1.2.1"
description = "Skewed sequences loss function analysis for transformer neural networks"
authors = ["Mikhail Gritskikh"]
readme = "README.md"
packages = [{include = "skewed_sequences"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
loguru = ">=0.7"
matplotlib = ">=3.8"
mlflow = ">=2.0"
numpy = ">=2.2,<3"
pandas = ">=2.2,<3"
python-dotenv = ">=1.0"
requests = ">=2.31"
scikit-learn = ">=1.6,<2"
scipy = ">=1.15,<2"
seaborn = ">=0.13"
torch = ">=2.6,<3"
tqdm = ">=4.60"
typer = {version = ">=0.9", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
flake8 = ">=7.0"
isort = ">=5.12"
pre-commit = ">=3.0"
pytest = ">=8.0"
pytest-cov = ">=5.0"

[tool.poetry.scripts]
skseq = "skewed_sequences.cli:app"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["skewed_sequences"]
force_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff.lint.isort]
known_first_party = ["skewed_sequences"]
force_sort_within_sections = true
